# iot-seminar-webhook

./: .gitignore  Cargo.toml  Dockerfile  Procfile  schema.sql  triangulated_positions.csv
datasets/: 2024-12-13 11:00:00__2024-12-13 18:00:00.csv  friday_static_2024-12-13_T11-00-00__2024-12-13_T18-00-00.csv  monday_tuesday_static_2024-12-16_T10-00-00__2024-12-17_T10-00-00.csv  tuesday_movement_2024-12-17_T10-00-00__2024-12-17_T15-00-00.csv  tuesday_static_2024-12-17_T15-00-00__2024-12-17_T23-59-00.csv
event_samples/: downlink_data_message.json  uplink_data_message.json
scripts/: analysis.py  unweighted_centroid.py  weighted_centroid.py
src/: main.rs  queries.rs
